--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "mocha --timeout 5000 --reporter mochawesome",
+    "test": "mocha --config .mocharc.js",
     "test.mocha.qa": "cross-env ENVIROMENT=qa REPORT=mochawesome mocha --require ts-node/register --config .mocharcMochawesome.js",
     "test.allure.qa": "cross-env ENVIROMENT=qa REPORT=Allure mocha --require ts-node/register --config .mocharcAllure.js",
     "generate:allure": "allure generate allure-results --clean -o allure-report && allure open allure-report"
